# ComfyUI-UniAnimate-W

./: .gitignore  Animate_X.ipynb  README.md  UniAnimateImg2Vid.json  UniAnimateImgRepose.json  __init__.py  basicUniAnimateWorkflow.json  environment.yaml  modeldownloader.py  original_run_align_pose_animate_X.py  pyproject.toml  requirements.txt  run_align_pose.py  run_align_pose_Animate_X.py  run_align_posev2.py  uniAnimateReposeImg.json  uniAnimate_Inference.py
.github/workflows/: publish.yml
configs/: Animate_X_infer.yaml  Animate_X_infer_long.yaml  UniAnimate_infer.yaml  UniAnimate_infer_long.yaml
dwpose/: onnxdet.py  onnxpose.py  util.py  wholebody.py
lib/rotary_embedding_torch/: __init__.py
lib/simplejson/: __init__.py  _speedups.cp39-win_amd64.pyd  compat.py  decoder.py  encoder.py  errors.py  ordered_dict.py  raw_json.py  scanner.py  tool.py
newWorkflows/: AnimateX vs UniAnimate Repose.json  Animate_X vs UniAnimate.json  Animate_X_Long vs UniAnimate_Long.json  image2VidLong.json  reposeImgNew.json
test_func/: save_targer_keys.py  test_EndDec.py  test_dataset.py  test_models.py  test_save_video.py
tools/: __init__.py
tools/datasets/: __init__.py  image_dataset.py  video_dataset.py
tools/inferences/: __init__.py  inference_animate_x_entrance.py  inference_animate_x_entrance_v2.py  inference_animate_x_long_entrance.py  inference_unianimate_entrance.py  (+1 more)
tools/modules/: __init__.py  (+4 more)
utils/: assign_cfg.py  config.py  distributed.py  logging.py  mp4_to_gif.py  multi_port.py  registry.py  registry_class.py  seed.py  transforms.py  util.py  video_op.py
(+48 files in other folders)
