[project]
name = "comfyui-unianimate-w"
description = "These are nodes to animate an image with a reference video using UniAnimate. [w/Name conflict with AIFSH/ComfyUI-UniAnimate. Cannot install simulatenously.]"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy==1.26.0", "opencv-python==4.9.0.80", "pytorch_lightning==2.3.0", "lightning_utilities==0.10.0", "lightning_fabric==2.3.0", "torchmetrics==1.3.0.post0", "xformers==0.0.27", "einops==0.7.0", "onnxruntime==1.18.0", "open-clip-torch==2.24.0", "fairscale==0.4.13", "easydict==1.11", "imageio==2.33.1", "matplotlib>=3.8.2", "args"]

[project.urls]
Repository = "https://github.com/Isi-dev/ComfyUI-UniAnimate-W"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-UniAnimate-W"
Icon = ""
